crates/core/tests/compile_fail/register_in_pack_removed.stderr
error[E0599]: no method named `register_in_pack` found for struct `Engine` in the current scope
 --> tests/compile_fail/register_in_pack_removed.rs:9:12
  |
9 |     engine.register_in_pack("pack-a", ());
  |            ^^^^^^^^^^^^^^^^
  |
help: there is a method `register_suggestor_in_pack` with a similar name
  |
9 |     engine.register_suggestor_in_pack("pack-a", ());
  |                     ++++++++++
